--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,6 @@ on:
 env:
   STORAGE_ACCOUNT_NAME: k8scovid
   STORAGE_DESTINATION: shiny-innovation-files
-  STORAGE_DESTINATION_PATH: example-R
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,4 +27,4 @@ jobs:
       uses: azure/CLI@v1
       with:
         inlineScript: |
-          az storage file upload-batch --account-name ${{ env.STORAGE_ACCOUNT_NAME }} --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} --destination ${{ env.STORAGE_DESTINATION }} --destination-path ${{ env.STORAGE_DESTINATION_PATH }} --source .
+          az storage file upload-batch --account-name ${{ env.STORAGE_ACCOUNT_NAME }} --account-key ${{ secrets.STORAGE_ACCOUNT_KEY }} --destination ${{ env.STORAGE_DESTINATION }} --source .
