feat(repo): Update CODEOWNERS workflows owner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,7 +2,7 @@
 *                     @statcan/daaas
 
 # Workflows are restricted
-/.github/workflows/     @sylus @zachomedia
+/.github/workflows/   @statcan/daaas-workflows
 
 # Project-specific owners
 #
