feat(codeowners): Only allow admins to make changes to the license

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -3,6 +3,8 @@
 
 # Codeowners is restricted
 CODEOWNERS            @statcan/daaas-admins
+LICENSE               @statcan/daaas-admins
+LICENSE.md            @statcan/daaas-admins
 
 # Workflows are restricted
 /.github/workflows/   @statcan/daaas-workflows
